# SignalMan

./: CMakeLists.txt  LICENSE.md  README.md
cmake/: BuildType.cmake
src/: CMakeLists.txt  SignalTap.cpp
src/include/signal-tap/: SignalTap.hpp
